--- a/public/css/Component/Admin/Admin_Center_Main_Request_Assigned.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Request_Assigned.css
@@ -9,8 +9,8 @@
 
     #centers i {
         color: var(--green-color-one);
-      }
-    
+    }
+
     #centers h3 {
         color: var(--green-color-one);
     }
@@ -64,7 +64,7 @@
         cursor: pointer;
     }
 
-    .collector_img{
+    .collector_img {
         width: 35px !important;
         height: 35px !important;
         border-radius: 50%;
@@ -82,6 +82,7 @@
     }
 
     /*Location Pop*/
+
     .location_pop {
         display: flex;
         position: fixed;
@@ -94,6 +95,9 @@
         justify-content: center;
         flex-direction: column;
         overflow: hidden;
+        box-shadow: var(--box-shadow2);
+        border-radius: 10px;
+
         transition: transform 0.4s ease-in, background-color 0.4s ease-in;
     }
 
@@ -104,7 +108,7 @@
     .location_pop_content {
         width: 700px;
         padding: 10px;
-        background-color: #f1f2f6;
+        background-color: var(--background-color-main);
         border-radius: 10px;
         padding: 20px;
         padding-bottom: 40px;
@@ -126,101 +130,22 @@
     }
 
     .location_close button {
-        background-color: #ff4757;
-        height: 28px;
-        color: #fff;
+        background-color: var(--red-color);
+        color: var(--background-color-main);
         cursor: pointer;
         border: none;
         font-size: 16px;
         border-radius: 5px;
         width: 85px;
+        height: 28px;
     }
 
-    /* ------ */
-    @media screen and (max-width: 1118px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
-        }
-
-        .table td {
-            font-size: 12px;
-        }
-
-        .table-header {
-            font-size: 14px;
-        }
-
-        .table-row img {
-            width: 20px;
-            height: 20px;
-        }
-    }
-
-    @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
-        }
-
-        .main-right-top-one input {
-            width: 20%;
-
-        }
-
-        .main-right-top-three-content p {
-            font-size: 14px;
-
-        }
 
 
-        .line {
-            width: 86px;
-            height: 2px;
-
-        }
-
-        .table td {
-
-            font-size: 10px;
-
-        }
-
-        .table-header {
-            font-size: 12px;
-        }
-
-        .table-row img {
-            width: 17px;
-            height: 17px;
-
-        }
 
 
-    }
-
-    @media screen and (max-width: 692px) {
-        .table td {
-            font-size: 9px;
-        }
-
-        .table-header {
-            font-size: 10px;
-        }
-
-        .table-row img {
-            width: 15px;
-            height: 15px;
-        }
-
-        .main-right-bottom {
-            width: 140%;
-        }
-    }
-
-     /*request details*/
-     .request-details-pop {
+    /*request details*/
+    .request-details-pop {
         display: flex;
         position: fixed;
         top: 50%;
@@ -239,7 +164,7 @@
 
     .request-details-pop.active {
         transform: translate(-50%, -50%) scale(1);
-            
+
     }
 
     .request-details-pop-form {
@@ -313,7 +238,7 @@
         padding-top: 40px;
         padding-left: 40px;
         padding-bottom: 50px;
-       
+
     }
 
     .request-details-right-labels span {
@@ -330,7 +255,7 @@
         padding-top: 40px;
         padding-left: 90px;
         padding-bottom: 50px;
-       
+
     }
 
     .request-details-right-values span {
@@ -340,6 +265,136 @@
         font-weight: 550;
     }
 
+    /* ------ */
+    @media screen and (max-width: 1118px) {
+        .main-right-top-one-content {
+            width: 250px;
+            margin-left: 1%;
+        }
 
-    
+        .table td {
+            font-size: 12px;
+        }
+
+        .table-header {
+            font-size: 14px;
+        }
+
+        .table-row img {
+            width: 20px;
+            height: 20px;
+        }
+
+        .location_pop_content {
+            width: 550px;
+        }
+    }
+
+    @media screen and (max-width:800px) {
+        .main-right-top-one-content {
+            width: 250px;
+            margin-left: 0;
+            padding-left: 5%;
+        }
+
+        .main-right-top-one input {
+            width: 40%;
+
+        }
+
+        .main-right-top-three-content p {
+            font-size: 14px;
+
+        }
+
+        .line {
+            width: 86px;
+            height: 2px;
+        }
+
+        .main-right-bottom {
+            width: 140%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-top {
+            width: 140%;
+        }
+
+        .main-right-bottom-down {
+            width: 140%;
+        }
+
+        .table-header {
+            grid-template-columns: 6% 7% 12% 12% 12% 13% 9% 11%;
+        }
+
+        .table-row {
+            grid-template-columns: 6% 7% 12% 12% 12% 13% 9% 11%;
+        }
+    }
+
+    @media screen and (max-width: 600px) {
+        .main-right-bottom {
+            width: 160%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-top {
+            width: 160%;
+        }
+
+        .main-right-bottom-down {
+            width: 160%;
+        }
+
+        .table-header {
+            grid-template-columns: 6% 7% 12% 8% 12% 13% 9% 11%;
+        }
+
+        .table-row {
+            grid-template-columns: 6% 7% 12% 8% 12% 13% 9% 11%;
+        }
+
+        .main-right-top-one input {
+            width: 30%;
+            margin-left: -10%;
+        }
+
+        .main-right-top-search {
+            width: 200px;
+        }
+    }
+
+    @media screen and (max-width: 550px) {
+        .main-right-bottom {
+            width: 170%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-top {
+            width: 170%;
+        }
+
+        .main-right-bottom-down {
+            width: 170%;
+        }
+
+        .location_pop_content {
+            width: 300px;
+        }
+
+        .location_pop_content {
+            height: 300px;
+        }
+
+        .table-header {
+            grid-template-columns: 6% 7% 10% 8% 11% 12% 8% 11%;
+        }
+
+        .table-row {
+            grid-template-columns: 6% 7% 10% 8% 11% 12% 8% 11%;
+        }
+
+    }
 }
