--- a/public/css/Component/Admin/Admin_Center_View.css
+++ b/public/css/Component/Admin/Admin_Center_View.css
@@ -4,7 +4,6 @@
         height: 100%;
         overflow: scroll;
         padding-left: 1%;
-
     }
 
     #centers i {
@@ -33,9 +32,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 35%;
+        width: 1%;
+        margin-left: 3% !important;
         position: relative;
-        margin-left: 3%;
     }
 
     .main-right-bottom-down {
@@ -153,88 +152,7 @@
         display: none;
     }
 
-    /* ------ */
-    @media screen and (max-width: 1118px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
-        }
 
-        .table td {
-            font-size: 12px;
-        }
-
-        .table-header {
-            font-size: 14px;
-        }
-
-        .table-row img {
-            width: 20px;
-            height: 20px;
-        }
-    }
-
-    @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
-        }
-
-        .main-right-top-one input {
-            width: 20%;
-
-        }
-
-        .main-right-top-three-content p {
-            font-size: 14px;
-
-        }
-
-
-        .line {
-            width: 86px;
-            height: 2px;
-
-        }
-
-        .table td {
-
-            font-size: 10px;
-
-        }
-
-        .table-header {
-            font-size: 12px;
-        }
-
-        .table-row img {
-            width: 17px;
-            height: 17px;
-
-        }
-
-
-    }
-
-    @media screen and (max-width: 692px) {
-        .table td {
-            font-size: 9px;
-        }
-
-        .table-header {
-            font-size: 10px;
-        }
-
-        .table-row img {
-            width: 15px;
-            height: 15px;
-        }
-
-        .main-right-bottom {
-            width: 140%;
-        }
-    }
 
     /*Center delete popup*/
     .center_delete {
@@ -327,6 +245,63 @@
 
     .cancelbtn:hover {
         background: #a7a1a1;
+    }
+
+    /* ------ */
+    @media screen and (max-width: 1118px) {
+        .main-right-top-one-content {
+            width: 250px;
+            margin-left: 1%;
+        }
+    }
+
+    @media screen and (max-width:862px) {
+        .main-right-top-one-content {
+            width: 250px;
+            margin-left: 0;
+            padding-left: 5%;
+        }
+
+        .main-right-top-one input {
+            width: 20%;
+        }
+
+        .main-right-top-three-content p {
+            font-size: 14px;
+        }
+
+        .line {
+            width: 86px;
+            height: 2px;
+        }
+    }
+
+    @media screen and (max-width: 692px) {
+
+        .table-header {
+            grid-template-columns: 13% 16% 14% 15% 16% !important;
+        }
+
+        .table-row {
+            grid-template-columns: 13% 16% 14% 15% 16% !important;
+        }
+
+        .main-right-bottom {
+            width: 140%;
+        }
+
+        .main-right-bottom-down {
+            width: 140%;
+        }
+
+        .main-right-bottom-top {
+            width: 140%;
+        }
+
+        .main-right-top-search {
+            width: 45% !important;
+        }
+
     }
 
     @media screen and (max-width: 878px) {
